<resources>
    <string name="app_name">BasicMusic</string>
    <string name="titulo">BasicMusic</string>
    <string name="txtBotonJuego">Jugar</string>
    <string name="txtBotonInfo">Información</string>
    <string name="txtBotonTeoria">Teoría</string>
    <string name="txtBtnSalir">Cerrar Sesión</string>
    <string name="tituloJugar">Modos de juego</string>
    <string name="txtBotonExamen">Mix</string>
    <string name="txtBotonRepetir">Entonación</string>
    <string name="txtBotonAdivinar">Adivinar</string>
    <string name="txtBotonRitmos">Ritmos</string>


    <string name="cambiosNv2AdNotas"> Ya no podrás reproducir las opciones &lt;br /&gt;  &lt;br /&gt;Ahora contarás con las referencias de &lt;b>DO&lt;/b> y &lt;b>LA&lt;/b> &lt;br /&gt; &lt;br /&gt;
        Desbloqueada la &lt;b>5º&lt;/b> octava</string>
    <string name="cambiosNv3AdNotas">Ahora elegirás entre &lt;b>TRES&lt;/b> opciones</string>
    <string name="cambiosNv4AdNotas">Ya no contarás con la referencia &lt;b>DO&lt;/b> &lt;br /&gt; &lt;br /&gt;Desbloqueada la &lt;b>6º&lt;/b> octava \</string>
    <string name="cambiosNv5AdNotas">Ahora elegirás entre &lt;b>CUATRO&lt;/b> opciones</string>
    <string name="cambiosNv6AdNotas">Desbloqueda la &lt;b>2º&lt;/b> octava</string>
    <string name="cambiosNv7AdNotas">Ahora elegirás entre &lt;b>CINCO&lt;/b> opciones</string>
    <string name="cambiosNv8AdNotas">Desbloqueada la &lt;b>7º&lt;/b> octava</string>
    <string name="cambiosNv9AdNotas">Ahora elegirás entre &lt;b>SEIS&lt;/b> opciones</string>
    <string name="cambiosNv10AdNotas">Ahora elegirás entre &lt;b>SIETE&lt;/b> opciones &lt;br /&gt;  &lt;br /&gt;Ya no contarás con la referencia &lt;b>LA&lt;/b> &lt;br /&gt; &lt;br /&gt;Desbloqueda la &lt;b>1º&lt;/b> octava</string>


    <string name="cambiosNv2AdIntervalos">Desbloqueados los intervalos con amplitud &lt;b>CINCO&lt;/b> &lt;br /&gt; &lt;br /&gt;Desbloqueadas la &lt;b>3º&lt;/b> y &lt;b>6º&lt;/b> octavas &lt;br /&gt; &lt;br /&gt;
        Ahora elegirás entre &lt;b>TRES&lt;/b> opciones</string>
    <string name="cambiosNv3AdIntervalos">Desbloqueados los intervalos con amplitud &lt;b>SIETE&lt;/b> &lt;br /&gt; &lt;br /&gt; Ahora elegirás entre &lt;b>CUATRO&lt;/b> opciones</string>
    <string name="cambiosNv4AdIntervalos">Desbloqueada la &lt;b>2º&lt;/b> octava</string>
    <string name="cambiosNv5AdIntervalos">Desbloqueados los intervalos con amplitud &lt;b>NUEVE&lt;/b></string>
    <string name="cambiosNv6AdIntervalos">Desbloqueados los intervalos con amplitud &lt;b>DOCE&lt;/b> &lt;br /&gt; &lt;br /&gt; Desbloqueada la &lt;b>SÉPTIMA&lt;/b> octava &lt;br /&gt; &lt;br /&gt;
        Ahora elegirás entre &lt;b>CINCO&lt;/b> opciones</string>


    <string name="cambiosNv2CrearIntervalos">Ya no contarás con la amplitud del intervalo en semitonos &lt;br /&gt; &lt;br /&gt;Desbloqueados los intervalos con amplitud &lt;b>CINCO&lt;/b> &lt;br /&gt; &lt;br /&gt;Desbloqueada la &lt;b>3º&lt;/b> octava &lt;br /&gt; &lt;br /&gt;
        Ahora elegirás entre &lt;b>TRES&lt;/b> opciones</string>
    <string name="cambiosNv3CrearIntervalos">Desbloqueados los intervalos con amplitud &lt;b>SIETE&lt;/b>  &lt;br /&gt; &lt;br /&gt;Desbloqueada la &lt;b>6º&lt;/b> octava </string>
    <string name="cambiosNv4CrearIntervalos">Desbloqueados los intervalos con amplitud &lt;b>NUEVE&lt;/b> &lt;br /&gt; &lt;br /&gt;Desbloqueada la &lt;b>2º&lt;/b> octava </string>
    <string name="cambiosNv5CrearIntervalos">Ya no contarás con el nombre de la nota de inicio del intervalo &lt;br /&gt; &lt;br /&gt;Ahora elegirás entre &lt;b>CUATRO&lt;/b> opciones</string>
    <string name="cambiosNv6CrearIntervalos">Desbloqueados los intervalos con amplitud &lt;b>ONCE&lt;/b></string>
    <string name="cambiosNv7CrearIntervalos">Ahora elegirás entre &lt;b>CINCO&lt;/b> opciones</string>
    <string name="cambiosNv8CrearIntervalos">Desbloqueados los intervalos con amplitud &lt;b>DOCE&lt;/b> &lt;br /&gt; &lt;br /&gt;Ahora elegirás entre &lt;b>SEIS&lt;/b> opciones</string>


    <string name="cambiosNv2AdAcordes">Ya no podrás reproducir las opciones &lt;br /&gt; &lt;br /&gt; Desbloqueados los &lt;b>ACORDES DISMINUIDOS&lt;/b> y &lt;b>AUMENTADOS&lt;/b>
        &lt;br /&gt; &lt;br /&gt; Desbloqueada la &lt;b>3º&lt;/b> octava &lt;br /&gt; &lt;br /&gt;Ahora elegirás entre &lt;b>TRES&lt;/b> opciones</string>
    <string name="cambiosNv3AdAcordes">Desbloqueados los &lt;b> ACORDES MAYORES CON SÉPTIMA MAYOR Y MENOR&lt;/b>
        &lt;br /&gt; &lt;br /&gt;Desbloqueada la &lt;b>2º&lt;/b> octava</string>
    <string name="cambiosNv4AdAcordes">Desbloqueados los &lt;b>ACORDES MENORES CON SÉPTIMA MAYOR Y MENOR&lt;/b> &lt;br /&gt; &lt;br /&gt;
        Desbloqueada la &lt;b>6º&lt;/b> octava &lt;br /&gt; &lt;br /&gt; Ahora elegirás entre &lt;b>CUATRO&lt;/b> opciones</string>
    <string name="cambiosNv5AdAcordes">Desbloqueados el &lt;b>ACORDE DISMINUIDO CON SÉPTIMA MENOR&lt;/b> y &lt;b>ACORDE DE SÉPTIMA CON SÉPTIMA DISMINUIDA&lt;/b></string>
    <string name="cambiosNv6AdAcordes">Desbloqueada la &lt;b>1º&lt;/b> octava &lt;br /&gt; &lt;br /&gt; Ahora elegirás entre &lt;b>CINCO&lt;/b> opciones</string>


    <string name="cambiosNv2CrearAcordes">Desbloqueados los &lt;b>ACORDES DISMINUIDOS&lt;/b> y &lt;b>AUMENTADOS&lt;/b>
        &lt;br /&gt; &lt;br /&gt; Desbloqueada la &lt;b>3º&lt;/b> octava &lt;br /&gt; &lt;br /&gt;Ahora elegirás entre &lt;b>SEIS&lt;/b> opciones</string>
    <string name="cambiosNv3CrearAcordes">Desbloqueados los &lt;b> ACORDES MAYORES CON SÉPTIMA MAYOR Y MENOR&lt;/b>
        &lt;br /&gt; &lt;br /&gt;Desbloqueada la &lt;b>2º&lt;/b> octava</string>
    <string name="cambiosNv4CrearAcordes">Desbloqueados los &lt;b>ACORDES MENORES CON SÉPTIMA MAYOR Y MENOR&lt;/b> &lt;br /&gt; &lt;br /&gt;
        Desbloqueada la &lt;b>6º&lt;/b> octava &lt;br /&gt; &lt;br /&gt; Ahora elegirás entre &lt;b>SIETE&lt;/b> opciones</string>
    <string name="cambiosNv5CrearAcordes">Ahora al reproducir una opción solo sonará la nota seleccionada&lt;br /&gt; &lt;br /&gt;Desbloqueados el &lt;b>ACORDE DISMINUIDO CON SÉPTIMA MENOR&lt;/b> y &lt;b>ACORDE DE SÉPTIMA CON SÉPTIMA DISMINUIDA&lt;/b></string>
    <string name="cambiosNv6CrearAcordes">Ya no podrás reproducir las opciones &lt;br /&gt; &lt;br /&gt;Desbloqueada la &lt;b>1º&lt;/b> octava &lt;br /&gt; &lt;br /&gt;
        Ahora elegirás entre &lt;b>OCHO&lt;/b> opciones</string>


    <string name="cambiosNv2HallaRitmos">Aumenta la velocidad del ritmo</string>
    <string name="cambiosNv3HallaRitmos">Desbloqueada la &lt;b>CAJA&lt;/b> &lt;br /&gt; &lt;br /&gt; Disminuye la velocidad del ritmo</string>
    <string name="cambiosNv4HallaRitmos">Ahora el compas será 4/4&lt;br /&gt; &lt;br /&gt;Aumenta la velocidad del ritmo</string>
    <string name="cambiosNv5HallaRitmos">Desbloqueado el &lt;b>TAMBOR&lt;/b> &lt;br /&gt; &lt;br /&gt; Disminuye la velocidad del ritmo</string>
    <string name="cambiosNv6HallaRitmos">Aumenta la velocidad del ritmo</string>
    <string name="cambiosNv7HallaRitmos">Desbloqueados los &lt;b>PLATILLOS&lt;/b> &lt;br /&gt; &lt;br /&gt; Disminuye la velocidad del ritmo</string>
    <string name="cambiosNv8HallaRitmos">Aumenta mucho la velocidad del ritmo</string>

    <string name="cambiosNv2RealizaRitmos">Aumenta la velocidad del ritmo</string>
    <string name="cambiosNv3RealizaRitmos">Desbloqueada la &lt;b>CAJA&lt;/b> &lt;br /&gt; &lt;br /&gt; Disminuye la velocidad del ritmo</string>
    <string name="cambiosNv4RealizaRitmos">Ahora el compas será 4/4&lt;br /&gt; &lt;br /&gt;Aumenta la velocidad del ritmo</string>
    <string name="cambiosNv5RealizaRitmos">Desbloqueado el &lt;b>TAMBOR&lt;/b> &lt;br /&gt; &lt;br /&gt; Disminuye la velocidad del ritmo</string>
    <string name="cambiosNv6RealizaRitmos">Aumenta la velocidad del ritmo</string>
    <string name="cambiosNv7RealizaRitmos">Desbloqueados los &lt;b>PLATILLOS&lt;/b> &lt;br /&gt; &lt;br /&gt; Disminuye la velocidad del ritmo</string>
    <string name="cambiosNv8RealizaRitmos">Aumenta mucho la velocidad del ritmo</string>


    <string name="cambiosNv2ImitarAudio">Ahora tendrás &lt;b>DOS&lt;/b> intentos &lt;br /&gt; &lt;br /&gt; Ahora podrás reproducir la nota solo &lt;b>TRES&lt;/b> veces</string>
    <string name="cambiosNv3ImitarAudio">Ahora tendrás que entonar la nota de una octava concreta</string>
    <string name="cambiosNv4ImitarAudio">Nuevas octavas desbloqueadas</string>
    <string name="cambiosNv5ImitarAudio">Ahora podrás reproducir la nota &lt;b>DOS&lt;/b> veces</string>
    <string name="cambiosNv6ImitarAudio">Nuevos octavas desbloqueadas</string>
    <string name="cambiosNv7ImitarAudio">Ahora tendrás &lt;b>UN SOLO&lt;/b> intento</string>
    <string name="cambiosNv8ImitarAudio">Ahora podrás reproducir la nota &lt;b>UNA&lt;/b> vez</string>

    <string name="cambiosNv2ModoMix">Ha subido el nivel de &lt;b>TODAS&lt;/b> las pruebas</string>
    <string name="cambiosNv3ModoMix">Ha subido el nivel de las pruebas de &lt;b>Adivinar Notas, Adivinar Intervalos, Crear Intervalos y Adivinar Acordes&lt;/b>&lt;br /&gt; &lt;br /&gt; Ahora necesitarás acertar &lt;b>OCHO&lt;/b> pruebas para aprobar</string>
    <string name="cambiosNv4ModoMix">Ha subido el nivel de las pruebas de &lt;b>Adivinar Notas, Crear Intervalos, Crear Acordes, Dibujar Ritmos e Imitar Ritmos&lt;/b>&lt;br /&gt; &lt;br /&gt; Ahora necesitarás acertar &lt;b>OCHO&lt;/b> pruebas para aprobar</string>
    <string name="cambiosNv5ModoMix">Ha subido el nivel de las pruebas de &lt;b>Adivinar Notas, Adivinar Acordes, Dibujar Ritmos e Imitar Ritmos&lt;/b>&lt;br /&gt; &lt;br /&gt; Ahora necesitarás acertar &lt;b>NUEVE&lt;/b> pruebas para aprobar</string>
    <string name="cambiosNv6ModoMix">Ha subido el nivel de las pruebas de &lt;b>Adivinar Notas, Adivinar Intervalos, Crear Intervalos, Crear Acordes y Dibujar Ritmos&lt;/b>&lt;br /&gt; &lt;br /&gt; Ahora necesitarás acertar &lt;b>DIEZ&lt;/b> pruebas para aprobar</string>
    <string name="cambiosNv7ModoMix">Ha subido el nivel de las pruebas de &lt;b>Adivinar Notas, Crear Intervalos, Adivinar Acordes, Dibujar Ritmos e Imitar Ritmos&lt;/b>&lt;br /&gt; &lt;br /&gt; Ahora necesitarás acertar &lt;b>ONCE&lt;/b> pruebas para aprobar</string>
    <string name="cambiosNv8ModoMix">Ha subido el nivel de las pruebas de &lt;b>Adivinar Notas, Adivinar Intervalos, Crear Acordes, e Imitar Ritmos&lt;/b>&lt;br /&gt; &lt;br /&gt; Ahora necesitarás acertar &lt;b>DOCE&lt;/b> pruebas para aprobar</string>
    <string name="cambiosNv9ModoMix">Ha subido el nivel de las pruebas de &lt;b>Adivinar Notas, Crear Intervalos, Dibujar Ritmos e Imitar Ritmos&lt;/b>&lt;br /&gt; &lt;br /&gt; Ahora necesitarás acertar &lt;b>TRECE&lt;/b> pruebas para aprobar</string>
    <string name="cambiosNv10ModoMix">Ha subido el nivel de &lt;b>TODAS&lt;/b> las pruebas&lt;br /&gt; &lt;br /&gt; Ahora necesitarás acertar &lt;b>CATORCE&lt;/b> pruebas para aprobar</string>


</resources>
