<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tituloJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tituloJugar"
        android:textAlignment="center"
        android:textColor="@color/md_blue_900"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:divider="@drawable/divisor_botones_menu"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/botonAdivinar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="modo_adivinar"
            android:text="@string/txtBotonAdivinar" />

        <Button
            android:id="@+id/botonRepetir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="modo_imitar"
            android:text="@string/txtBotonRepetir" />

        <Button
            android:id="@+id/botonRitmos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="modo_ritmos"

            android:text="@string/txtBotonRitmos" />

        <Button
            android:id="@+id/botonExamen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:text="@string/txtBotonExamen"
            android:visibility="invisible" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>