<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:layout_marginTop="176dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/md_blue_900"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonJuego"
        android:layout_width="251dp"
        android:layout_height="47dp"
        android:layout_marginTop="308dp"
        android:onClick="ejecutar_jugar"
        android:text="@string/txtBotonJuego"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonTeoria"
        android:layout_width="251dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtBotonTeoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonJuego" />

    <Button
        android:id="@+id/botonInfo"
        android:layout_width="251dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtBotonInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonTeoria" />


    <Button
        android:id="@+id/botonSalir"
        android:layout_width="251dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:onClick="salir"
        android:text="@string/txtBtnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonEstadisticas" />

    <Button
        android:id="@+id/botonEstadisticas"
        android:layout_width="251dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:onClick="mostrarEstadisticas"
        android:text="Estadísticas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonInfo" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="81dp"
        android:layout_height="79dp"
        android:background="@drawable/picture"
        android:onClick="ejecutar_Perfil"
        app:layout_constraintBottom_toTopOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/picture" />

</androidx.constraintlayout.widget.ConstraintLayout>